--- a/fluid_mechanics/_static/style.css
+++ b/fluid_mechanics/_static/style.css
@@ -27,15 +27,16 @@ table p {
 /*------ expandable button: https://www.w3schools.com/howto/howto_js_collapsible.asp */
 
 .expandable {
-  background-color: #777;
-  color: white;
+  background-color: #aaaaaa;
+  color: #ffffff;
   cursor: pointer;
-  padding: 10px;
+  padding: 8px;
   width: 100%;
   border: none;
   text-align: left;
   outline: none;
-  font-size: 15px;
+  font-size: 18px;
+  text-align: center;
 }
 
 .expandable:hover, .expandable:active {
@@ -49,5 +50,13 @@ table p {
   overflow: hidden;
   transition: max-height 0.2s ease-out;
   background-color: #f1f1f1;
+}
+
+.expandable_example_content {
+  padding: 0 36px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  background-color: #d7e5f2;
 }
 
